# GP2Coursework

./: CMakeLists.txt  Class Diagram.uml  Class Diagram.~ml  README.md
Nsight reports/: 02-12 - Alex.xml  20-11 - Alex.xml
assets/models/: Holodome.FBX  Holodome2.max  Scene.FBX  Test Scene.max  floor.FBX  room.FBX
assets/scenes/: holoRoom.banana
assets/shaders/: quadVS.glsl  shadowMapFS.glsl  shadowMapVS.glsl  skyboxFS.glsl  skyboxVS.glsl  textureFS.glsl  textureShadowFS .glsl  textureShadowVS.glsl  textureVS.glsl  toonSpecularFS.glsl
assets/shaders/final Shaders/: textureSpecularFS.glsl  textureSpecularVS.glsl
beardEngine/include/: Active.h  Box.h  Common.h  Cube.h  CubeTexture.h  Editor.h  FBXLoader.h  FileSystem.h  Game.h  GameObject.h  InputManager.h  KeyboardListener.h  LightSource.h  Mesh.h  Object.h  OpenGL.h  OutlineMaterial.h  Plane.h  PlayerController.h  SDL2.h  SavingData.h  Scene.h  Shader.h  Texture.h  ToonMaterial.h  Vertex.h  ViewFrustumCulling.h  Window.h
beardEngine/include/Components/: BaseComponent.h  Components.h  InputComponent.h  RenderComponent.h
beardEngine/src/: Cube.cpp  CubeTexture.cpp  Editor.cpp  FBXLoader.cpp  FileSystem.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  LightSource.cpp  Mesh.cpp  Object.cpp  OpenGL.cpp  OutlineMaterial.cpp  PlayerController.cpp  SDL2.cpp  SavingData.cpp  Shader.cpp  Texture.cpp  ToonMaterial.cpp  ViewFrustumCulling.cpp  Window.cpp
beardEngine/src/Components/: InputComponent.cpp  RenderComponent.cpp
cmake/: FindSDL2.cmake  findFBX.cmake  findSDL2_Image.cmake  findSDL2_ttf.cmake
dlls/: InputComponent.h
include/: Common.h  Editor.h  GP2CourseWorkGame.h  Game.h  GameObject.h  HoloRoomScene.h  InputManager.h  KeyboardListener.h  Mesh.h  Object.h  OpenGL.h  PlayerController.h  SavingData.h  Scene.h  Shader.h  Texture.h  Vertex.h  Window.h
include/Components/: BaseComponent.h  RenderComponent.h
src/: Editor.cpp  FBXLoader.cpp  GP2CourseWorkGame.cpp  Game.cpp  GameObject.cpp  Graphics.cpp  HoloRoomScene.cpp  InputManager.cpp  Object.cpp  OpenGL.cpp  PlayerController.cpp  SDL2.cpp  SavingData.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
src/Components/: BaseComponent.cpp  InputComponent.cpp  RenderComponent.cpp
